# eryx

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .luaurc  CMakeLists.txt  CMakePresets.json  README.md  modules_native.cmake  modules_script.cmake  runtime.cmake
.github/workflows/: ci.yml
src/: LuaUtil.hpp  main.cpp  pch.hpp  vfs.cpp  vfs.hpp
src/modules/: _ffi.cpp  _ffi.hpp  _ffi.luau  _socket.cpp  _socket.hpp  _socket.luau  _ssl.cpp  _ssl.luau  argparse.luau  date.cpp  date.luau  date.test.luau  exception.cpp  exception.luau  fs.cpp  fs.luau  http.luau  luau.cpp  luau.luau  mime.luau  module_api.h  net.luau  os.cpp  os.luau  pprint.luau  signal.luau  sqlite3.cpp  sqlite3.luau  stdio.cpp  stdio.luau  task.cpp  task.luau  test.luau  vfs.cpp  vfs.luau  xml.cpp  xml.luau
src/modules/compression/: brotli.cpp  brotli.luau  brotli.test.luau  bzip2.cpp  bzip2.luau  bzip2.test.luau  gzip.cpp  gzip.luau  gzip.test.luau  zip.cpp  zip.luau  zip.test.luau  zlib.cpp  zlib.luau  zlib.test.luau  zstd.cpp  zstd.luau  zstd.test.luau
src/modules/crypto/: _crypto.cpp  _crypto.luau  aes.luau  asn1.luau  camellia.luau  chacha20.luau  des.luau  hash.luau  hash.test.luau  hmac.luau  hmac.test.luau  kdf.luau  pem.luau  rsa.luau
src/modules/encoding/: base32.luau  base32.test.luau  base64.luau  base64.test.luau  base85.luau  base85.test.luau  csv.luau  csv.test.luau  hex.luau  hex.test.luau  init.luau  json.luau  json.test.luau  url.luau  url.test.luau  yaml.luau
src/modules/gfx/: Font.cpp  Font.hpp  GFX.cpp  GFX.hpp  GPU.cpp  GPU.hpp  LL_Font.cpp  LL_Font.hpp  LL_Render.cpp  LL_Render.hpp  LL_Texture.cpp  LL_Texture.hpp  Mouse.cpp  Mouse.hpp  Particles.cpp  Particles.hpp  Shader.cpp  Shader.hpp  Sound.cpp  Sound.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp  _gfx.cpp  font.luau  init.luau  mouse.luau  particles.luau  pch.hpp  shader.luau  shader.wgsl  sound.luau  texture.luau  window.luau
src/modules/markdown/: html.luau  init.luau  parse.luau
src/modules/template/: init.luau  parser.luau
src/runtime/: _wrapper_lib.cpp  _wrapper_lib.hpp  embedded_modules.h  embedded_registry.cpp  lconfig.cpp  lconfig.hpp  lexception.cpp  lexception.hpp  lprint.cpp  lprint.hpp  lrequire.cpp  lrequire.hpp  lresolve.cpp  lresolve.hpp
src/scripts/: compile.luau  test.luau
